--- a/Book.Web/Views/Home/Login.cshtml
+++ b/Book.Web/Views/Home/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Login";
-    
+    String title = ViewBag.Title;
 }
 
 <!DOCTYPE html>
@@ -47,25 +47,10 @@
                     <br>
                     <input type="password" class="form-control" placeholder="Password">
                     <label class="checkbox">
-                        @*<span class="pull-right">
-                            <a data-toggle="modal" href="login.html#myModal"> Forgot Password?</a>
-
-                        </span>*@
+                       
                     </label>
                     <button class="btn btn-theme btn-block" href="index.html" type="submit"><i class="fa fa-lock"></i> SIGN IN</button>
                     <hr>
-
-                    @*<div class="login-social-link centered">
-                        <p>or you can sign in via your social network</p>
-                        <button class="btn btn-facebook" type="submit"><i class="fa fa-facebook"></i> Facebook</button>
-                        <button class="btn btn-twitter" type="submit"><i class="fa fa-twitter"></i> Twitter</button>
-                    </div>
-                    <div class="registration">
-                        Don't have an account yet?<br />
-                        <a class="" href="#">
-                            Create an account
-                        </a>
-                    </div>*@
 
                 </div>
 
