--- a/Book.Web/Views/Index/Index.cshtml
+++ b/Book.Web/Views/Index/Index.cshtml
@@ -161,7 +161,7 @@
                     html += "<td>" + result[i].Price + "</td>";
                     html += "<td>";
                     html += "  <a href=\"javascript:bookDeletePre(" + result[i].Id + ")\">删除</a>";
-                    html += "  <a href=\"/book/update?Id=" + result[i].Id + ")\">编辑</a>";
+                    html += "  <a href=\"/index/update?Id=" + result[i].Id + "\">编辑</a>";
                     html += "</td>";
                 }
                 //$("#bodyContent").html(html);
