--- a/Book.Web/Views/Home/Login.cshtml
+++ b/Book.Web/Views/Home/Login.cshtml
@@ -40,12 +40,12 @@
     <div id="login-page">
         <div class="container">
 
-            <form class="form-login" action="index.html">
+            <form class="form-login" action="/home/check" method="post">
                 <h2 class="form-login-heading">sign in now</h2>
                 <div class="login-wrap">
-                    <input type="text" class="form-control" placeholder="User ID" autofocus>
+                    <input type="text" class="form-control" placeholder="User ID" autofocus name="LoginName">
                     <br>
-                    <input type="password" class="form-control" placeholder="Password">
+                    <input type="password" class="form-control" placeholder="Password" id="Password" name="PWD">
                     <label class="checkbox">
                        
                     </label>
