--- a/Book.Web/Views/Index/Index.cshtml
+++ b/Book.Web/Views/Index/Index.cshtml
@@ -4,6 +4,9 @@
     int count = ViewBag.count;
     int pageSize = ViewBag.PageSize;
     int MaxPageIndex = ViewBag.MaxPageIndex;
+    String Author = ViewBag.Author;
+    String BookName = ViewBag.BookName;
+   
 }
 
 @section css{
@@ -14,7 +17,22 @@
         <h3><i class="fa fa-angle-right"></i> 书籍信息</h3>
         <div class="row mt">
             <div class="col-lg-12">
+
+               
                 <div class="content-panel">
+                     <!--查询框-->
+                    <form class="form-inline" style="padding-left:50px" method="post" action="/index/index">
+                        <div class="form-group">
+                            <label for="exampleInputName2">书名</label>
+                            <input type="text" class="form-control" id="BookName" name="BookName" placeholder="" value=@BookName>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputName2">作者</label>
+                            <input type="text" class="form-control" id="Author" name="Author" placeholder="" value=@Author>
+                        </div>
+                      
+                        <input type="submit" class="btn btn-default"value="查询"></input>
+                    </form>
                     <h4><i class="fa fa-angle-right"></i>书籍列表 </h4>
                     <section id="unseen">
                         <table class="table table-bordered table-striped table-condensed">
@@ -104,7 +122,7 @@
 </div>
 
 @section js{
-
+    <script type="text/javascript>
     currentId=0;
     function deleteJudge(Id)
     {
@@ -137,15 +155,17 @@
 
 
 
-
+    </script>
 
 }
 
 <script type="text/javascript">
     function getList(currentPage) {
+        var bookName = $("#BookName").val();
+        var author = $("#Author").val();
         $.ajax({
             url: "/index/GetList",
-            data: "currentPage=" + currentPage,
+            data: {currentPage:currentPage, BookName:bookName, Author:author},//"currentPage=" + currentPage,
             type: "post",
             success: function (result) {
                 // alert(result[0].BookName);
