--- a/Book.Web/Views/Provider/Index.cshtml
+++ b/Book.Web/Views/Provider/Index.cshtml
@@ -4,6 +4,7 @@
     int count = ViewBag.count;
     int pageSize = ViewBag.PageSize;
     int MaxPageIndex = ViewBag.MaxPageIndex;
+    String Name = ViewBag.Name;
 }
 
 @section css{
@@ -14,7 +15,19 @@
         <h3><i class="fa fa-angle-right"></i> 出版社信息</h3>
         <div class="row mt">
             <div class="col-lg-12">
+
+                
                 <div class="content-panel">
+                    <!--查询框-->
+                    <form class="form-inline" style="padding-left:50px" method="post" action="/provider/index">
+                        <div class="form-group">
+                            <label for="exampleInputName2">供应商名</label>
+                            <input type="text" class="form-control" id="Name" name="Name" placeholder="" value=@Name>
+                        </div>
+ 
+
+                        <input type="submit" class="btn btn-default" value="查询"></input>
+                    </form>
                     <h4><i class="fa fa-angle-right"></i>出版社列表 </h4>
                     <section id="unseen">
                         <table class="table table-bordered table-striped table-condensed">
@@ -133,9 +146,11 @@
 
 <script type="text/javascript">
     function getList(currentPage) {
+
+        var name = $("#Name").val();
         $.ajax({
             url: "/provider/GetList",
-            data: "currentPage=" + currentPage,
+            data: {currentPage:currentPage,Name:name},//"currentPage=" + currentPage,
             type: "post",
             success: function (result) {
                 // alert(result[0].BookName);
