--- a/Book.Web/Views/Index/Index.cshtml
+++ b/Book.Web/Views/Index/Index.cshtml
@@ -30,7 +30,7 @@
                             <label for="exampleInputName2">作者</label>
                             <input type="text" class="form-control" id="Author" name="Author" placeholder="" value=@Author>
                         </div>
-                      
+                        <button type="submit" class="btn btn-default" onclick="getList(1)" value="查询1"></button>
                         <input type="submit" class="btn btn-default"value="查询"></input>
                     </form>
                     <h4><i class="fa fa-angle-right"></i>书籍列表 </h4>
