--- a/Book.Web/Views/Customer/Index.cshtml
+++ b/Book.Web/Views/Customer/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "/Views/Shared/_Layout.cshtml";
-    List<Book.Model.T_Base_Provider> lst = ViewBag.lst;
+    List<Book.Model.T_Base_Customer> lst = ViewBag.lst;
     int count = ViewBag.count;
     int pageSize = ViewBag.PageSize;
     int MaxPageIndex = ViewBag.MaxPageIndex;
@@ -12,29 +12,29 @@
 }
 <section id="main-content">
     <section class="wrapper">
-        <h3><i class="fa fa-angle-right"></i> 出版社信息</h3>
+        <h3><i class="fa fa-angle-right"></i> 客户信息</h3>
         <div class="row mt">
             <div class="col-lg-12">
 
-                
+
                 <div class="content-panel">
                     <!--查询框-->
-                    <form class="form-inline" style="padding-left:50px" method="post" action="/provider/index">
+                    <form class="form-inline" style="padding-left:50px" method="post" action="/Customer/index">
                         <div class="form-group">
-                            <label for="exampleInputName2">供应商名</label>
+                            <label for="exampleInputName2">客户名</label>
                             <input type="text" class="form-control" id="Name" name="Name" placeholder="" value=@Name>
                         </div>
- 
+
 
                         <input type="submit" class="btn btn-default" value="查询"></input>
                     </form>
-                    <h4><i class="fa fa-angle-right"></i>出版社列表 </h4>
+                    <h4><i class="fa fa-angle-right"></i>客户列表 </h4>
                     <section id="unseen">
                         <table class="table table-bordered table-striped table-condensed">
                             <thead>
                                 <tr>
                                     <th>序号</th>
-                                    <th>出版社名称</th>
+                                    <th>客户名称</th>
                                     <th>电话</th>
                                     <th>传真</th>
                                     <th>备注</th>
@@ -54,7 +54,7 @@
 
                                         <td>
                                             <a href="javascript:deleteJudge(@item.Id)">删除</a>
-                                            <a href="/provider/update?id=@item.Id">编辑</a>
+                                            <a href="/Customer/update?id=@item.Id">编辑</a>
                                         </td>
 
                                     </tr>
@@ -114,8 +114,8 @@
 </div>
 
 @section js{
-        <script>
-  
+    <script>
+
         currentId = 0;
         function deleteJudge(Id) {
             currentId = Id;
@@ -129,7 +129,7 @@
 
 
             $.ajax({
-                url: "/provider/DeleteJson",
+                url: "/Customer/DeleteJson",
                 data: "Id=" + Id,
                 type: "post",
                 dataType: "json",
@@ -142,8 +142,8 @@
             })
 
         }
-        </script>
-   
+    </script>
+
 }
 
 <script type="text/javascript">
@@ -151,8 +151,8 @@
 
         var name = $("#Name").val();
         $.ajax({
-            url: "/provider/GetList",
-            data: {currentPage:currentPage,Name:name},//"currentPage=" + currentPage,
+            url: "/Customer/GetList",
+            data: { currentPage: currentPage, Name: name },//"currentPage=" + currentPage,
             type: "post",
             success: function (result) {
                 // alert(result[0].BookName);
@@ -167,7 +167,7 @@
 
                     html += "<td>";
                     html += "  <a href=\"javascript:bookDeletePre(" + result[i].Id + ")\">删除</a>";
-                    html += "  <a href=\"/provider/update?Id=" + result[i].Id + ")\">编辑</a>";
+                    html += "  <a href=\"/Customer/update?Id=" + result[i].Id + ")\">编辑</a>";
                     html += "</td>";
                 }
                 //$("#bodyContent").html(html);
