--- a/Book.Web/Views/In/Index.cshtml
+++ b/Book.Web/Views/In/Index.cshtml
@@ -14,9 +14,9 @@
                     <section id="unseen">
                         <table id="InList"></table>
                         <div id="toolbar" class="btn-group pull-left" style="margin-right: 20px;">
-                            <button id="btn_edit" type="button" class="btn btn-default" style=" border-radius 0">
+                            @*<button id="btn_edit" type="button" class="btn btn-default" style=" border-radius 0">
                                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
-                            </button>
+                            </button>*@
                             <button id="btn_delete" type="button" class="btn btn-default" style="">
                                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
                             </button>
@@ -113,10 +113,25 @@
                 field: 'Head.Provider.Name',
                 title: '供应商',
                 align: 'center'
+            }, {
+                field: 'Head.Id',
+                title: '操作',
+                align: 'center',
+                formatter: function (value, row, index) {
+                    //var tmp = eval('new ' + eval('' + value + '').source);
+                    //return tmp.getFullYear() + '-' + (tmp.getMonth() + 1) + '-' + tmp.getDate();
+                    return "<button  type=\"button\" class=\"btn btn-default\" onclick = \"editClick("+value+")\"> <span class=\"glyphicon glyphicon-pencil\" aria-hidden=\"true\"></spa>编辑</button>"
+                }
             }
 
             ]
         });
+
+        function editClick(id) {
+
+            //window.alert(""+id);
+            window.location.href = "/In/edit?Id=" + id;
+        }
         function queryParams(params) {
             return {
                 pageSize: params.pageSize,
@@ -124,6 +139,9 @@
                 search:params.searchText
             }
         }
+
+        //function
+
         $("#btn_delete").click(function () {
             //alert("11");
             var ids = $.map(
