--- a/Book.Web/Views/Admin/Index.cshtml
+++ b/Book.Web/Views/Admin/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     Layout = "/Views/Shared/_Layout.cshtml";
-    List<Book.Model.T_Base_Provider> lst = ViewBag.lst;
+    List<Book.Model.T_Base_Admin> lst = ViewBag.lst;
     int count = ViewBag.count;
     int pageSize = ViewBag.PageSize;
     int MaxPageIndex = ViewBag.MaxPageIndex;
@@ -12,32 +12,33 @@
 }
 <section id="main-content">
     <section class="wrapper">
-        <h3><i class="fa fa-angle-right"></i> 出版社信息</h3>
+        <h3><i class="fa fa-angle-right"></i> 用户信息</h3>
         <div class="row mt">
             <div class="col-lg-12">
 
-                
+
                 <div class="content-panel">
                     <!--查询框-->
-                    <form class="form-inline" style="padding-left:50px" method="post" action="/provider/index">
+                    <form class="form-inline" style="padding-left:50px" method="post" action="/admin/index">
                         <div class="form-group">
-                            <label for="exampleInputName2">供应商名</label>
+                            <label for="exampleInputName2">用户名</label>
                             <input type="text" class="form-control" id="Name" name="Name" placeholder="" value=@Name>
                         </div>
- 
+
 
                         @*<input type="submit" class="btn btn-default" value="查询"></input>*@
                     </form>
-                    <h4><i class="fa fa-angle-right"></i>出版社列表 </h4>
+                    <h4><i class="fa fa-angle-right"></i>用户列表 </h4>
                     <section id="unseen">
                         <table class="table table-bordered table-striped table-condensed">
                             <thead>
                                 <tr>
                                     <th>序号</th>
-                                    <th>出版社名称</th>
-                                    <th>电话</th>
-                                    <th>传真</th>
-                                    <th>备注</th>
+                                    <th>用户名</th>
+                                    <th>密码</th>
+                                    <th>身份</th>
+                                    <th>操作</th>
+                                  
 
                                 </tr>
                             </thead>
@@ -46,23 +47,17 @@
                                 {
                                     <tr id="tr_@item.Id">
                                         <td>@item.Id</td>
-                                        <td>@item.Name</td>
-                                        <td>@item.Tel</td>
-                                        <td>@item.Fax</td>
-                                        <td>@item.Memo</td>
-
-
+                                        <td>@item.LoginName</td>
+                                        <td>@item.PWD</td>
+                                        <td>@item.RoleName</td>
                                         <td>
                                             <a href="javascript:deleteJudge(@item.Id)">删除</a>
-                                            <a href="/provider/update?id=@item.Id">编辑</a>
+                                            <a href="/admin/update?id=@item.Id">编辑</a>
                                         </td>
-
                                     </tr>
                                 }
                             </tbody>
                         </table>
-
-
                         <div class="btn-group" id="pageBtnGroup">
                             @{
                                 for (int i = 1; i <= Math.Ceiling(count * 1.0 / pageSize); i++)
@@ -114,8 +109,8 @@
 </div>
 
 @section js{
-        <script>
-  
+    <script>
+
         currentId = 0;
         function deleteJudge(Id) {
             currentId = Id;
@@ -129,7 +124,7 @@
 
 
             $.ajax({
-                url: "/provider/DeleteJson",
+                url: "/admin/DeleteJson",
                 data: "Id=" + Id,
                 type: "post",
                 dataType: "json",
@@ -147,8 +142,8 @@
             console.log("hello");
             getList(1);
         })
-        </script>
-   
+    </script>
+
 }
 
 <script type="text/javascript">
@@ -156,8 +151,8 @@
 
         var name = $("#Name").val();
         $.ajax({
-            url: "/provider/GetList",
-            data: {currentPage:currentPage,Name:name},//"currentPage=" + currentPage,
+            url: "/admin/GetList",
+            data: { currentPage: currentPage, Name: name },//"currentPage=" + currentPage,
             type: "post",
             success: function (data) {
 
@@ -169,14 +164,13 @@
                 for (var i = 0; i < result.length; i++) {
                     html += "<tr id=\"tr_" + result[i].Id + "\">";
                     html += " <td>" + result[i].Id + "</td>"
-                    html += "<td>" + result[i].Name + "</td>";
-                    html += "<td>" + result[i].Tel + "</td>";
-                    html += "<td>" + result[i].Fax + "</td>";
-                    html += "<td>" + result[i].Memo + "</td>";
+                    html += "<td>" + result[i].LoginName + "</td>";
+                    html += "<td>" + result[i].PWD + "</td>";
+                    html += "<td>" + result[i].RoleName + "</td>";
 
                     html += "<td>";
                     html += "  <a href=\"javascript:deleteJudge(" + result[i].Id + ")\">删除</a>";
-                    html += "  <a href=\"/provider/update?Id=" + result[i].Id + ")\">编辑</a>";
+                    html += "  <a href=\"/admin/update?Id=" + result[i].Id + ")\">编辑</a>";
                     html += "</td>";
                 }
                 //$("#bodyContent").html(html);
