--- a/Book.Web/Views/Shared/_Layout.cshtml
+++ b/Book.Web/Views/Shared/_Layout.cshtml
@@ -9,12 +9,20 @@
     else
     {
         flag = true;
-        var ticket = (HttpContext.Current.User.Identity as FormsIdentity).Ticket;
-        LoginName = ticket.Name;
-        var RoleId = ticket.Version;
-        //根据Id去获取相关的菜单
-        Book.BLL.T_Base_Home bllHome = new Book.BLL.T_Base_Home();
-        lst = bllHome.GetMenuList(RoleId);
+        try
+        {
+            var ticket = (HttpContext.Current.User.Identity as FormsIdentity).Ticket;
+            LoginName = ticket.Name;
+            var RoleId = ticket.Version;
+            //根据Id去获取相关的菜单
+            Book.BLL.T_Base_Home bllHome = new Book.BLL.T_Base_Home();
+            lst = bllHome.GetMenuList(RoleId);
+        }
+        catch (Exception e)
+        {
+            flag = false;
+        }
+        
         
     }
     
@@ -210,7 +218,7 @@
             </div>
             <div class="top-menu">
                 <ul class="nav pull-right top-menu">
-                    <li><a class="logout" href="login.html">Logout</a></li>
+                    <li><a class="logout" href="~/home/logout">Logout</a></li>
                 </ul>
             </div>
         </header>
@@ -226,6 +234,14 @@
 
                     <p class="centered"><a href="profile.html"><img src="/assets/img/ui-sam.jpg" class="img-circle" width="60"></a></p>
                     <h5 class="centered">@LoginName</h5>
+                    <li class="mt">
+                        <a class="active" href="/home/index">
+                            <i class="fa fa-dashboard"></i>
+                            <span>面板</span>
+                        </a>
+                    </li>
+
+                    
                     @{
                         if (flag == true)
                         {
@@ -305,24 +321,24 @@
     <script src="/assets/js/zabuto_calendar.js"></script>
     
     <script type="text/javascript">
-        $(document).ready(function () {
-        var unique_id = $.gritter.add({
-            // (string | mandatory) the heading of the notification
-            title: 'Welcome to Dashgum!',
-            // (string | mandatory) the text inside the notification
-            text: 'Hover me to enable the Close Button. You can hide the left sidebar clicking on the button next to the logo. Free version for <a href="" target="_blank" style="color:#ffd777">BlackTie.co</a>.',
-            // (string | optional) the image to display on the left
-            image: '/assets/img/ui-sam.jpg',
-            // (bool | optional) if you want it to fade out on its own or just sit there
-            sticky: true,
-            // (int | optional) the time you want it to be alive for before fading out
-            time: '',
-            // (string | optional) the class name you want to apply to that specific message
-            class_name: 'my-sticky-class'
-        });
+        //$(document).ready(function () {
+        //var unique_id = $.gritter.add({
+        //    // (string | mandatory) the heading of the notification
+        //    title: 'Welcome to Dashgum!',
+        //    // (string | mandatory) the text inside the notification
+        //    text: 'Hover me to enable the Close Button. You can hide the left sidebar clicking on the button next to the logo. Free version for <a href="" target="_blank" style="color:#ffd777">BlackTie.co</a>.',
+        //    // (string | optional) the image to display on the left
+        //    image: '/assets/img/ui-sam.jpg',
+        //    // (bool | optional) if you want it to fade out on its own or just sit there
+        //    sticky: true,
+        //    // (int | optional) the time you want it to be alive for before fading out
+        //    time: '',
+        //    // (string | optional) the class name you want to apply to that specific message
+        //    class_name: 'my-sticky-class'
+        //});
 
-        return false;
-        });
+        //return false;
+        //});
 
         
     </script>
