--- a/Book.Web/Views/Admin/Index.cshtml
+++ b/Book.Web/Views/Admin/Index.cshtml
@@ -29,6 +29,13 @@
                         @*<input type="submit" class="btn btn-default" value="查询"></input>*@
                     </form>
                     <h4><i class="fa fa-angle-right"></i>用户列表 </h4>
+                    <div id="toolbar" class="btn-group pull-left" style="margin-right: 20px;">
+
+
+                        <button id="btn_add" type="button" class="btn btn-default" onclick="location.href='/Admin/add'">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
+                        </button>
+                    </div>
                     <section id="unseen">
                         <table class="table table-bordered table-striped table-condensed">
                             <thead>
