--- a/Book.Web/Views/Home/Index.cshtml
+++ b/Book.Web/Views/Home/Index.cshtml
@@ -1,6 +1,11 @@
 ﻿
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int admin = ViewBag.admin;
+    int book = ViewBag.book;
+    int provider = ViewBag.provider;
+    int customer = ViewBag.customer;
+    int stock = ViewBag.stock;
 }
 
 <!--main content start-->
@@ -14,37 +19,37 @@
                     <div class="col-md-2 col-sm-2 col-md-offset-1 box0">
                         <div class="box1">
                             <span class="li_heart"></span>
-                            <h3>933</h3>
+                            <h3>客户数目</h3>
                         </div>
-                        <p>933 People liked your page the last 24hs. Whoohoo!</p>
+                        <p>@customer</p>
                     </div>
                     <div class="col-md-2 col-sm-2 box0">
                         <div class="box1">
                             <span class="li_cloud"></span>
-                            <h3>+48</h3>
+                            <h3>书籍数目</h3>
                         </div>
-                        <p>48 New files were added in your cloud storage.</p>
+                        <p>@book</p>
                     </div>
                     <div class="col-md-2 col-sm-2 box0">
                         <div class="box1">
                             <span class="li_stack"></span>
-                            <h3>23</h3>
+                            <h3>供应商</h3>
                         </div>
-                        <p>You have 23 unread messages in your inbox.</p>
+                        <p>@provider</p>
                     </div>
                     <div class="col-md-2 col-sm-2 box0">
                         <div class="box1">
                             <span class="li_news"></span>
-                            <h3>+10</h3>
+                            <h3>用户</h3>
                         </div>
-                        <p>More than 10 news were added in your reader.</p>
+                        <p>@admin</p>
                     </div>
                     <div class="col-md-2 col-sm-2 box0">
                         <div class="box1">
                             <span class="li_data"></span>
-                            <h3>OK!</h3>
+                            <h3>库存量</h3>
                         </div>
-                        <p>Your server is working perfectly. Relax & enjoy.</p>
+                        <p>@stock</p>
                     </div>
 
                 </div><!-- /row mt -->
