--- a/Book.Web/Views/Index/Index.cshtml
+++ b/Book.Web/Views/Index/Index.cshtml
@@ -33,7 +33,17 @@
                        
                      
                     </form>
-                  
+                    <div id="toolbar" class="input-group" style="max-width:300px;">
+                        
+                        <div id="toolbar" class="btn-group pull-left" style="margin-right: 20px;">
+               
+                            
+                            <button id="btn_add" type="button" class="btn btn-default" onclick="location.href='/index/add'">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
+                            </button>
+                        </div>
+                      
+                    </div><!-- /input-group -->
                     <h4><i class="fa fa-angle-right"></i>书籍列表 </h4>
                     <section id="unseen">
                         <table class="table table-bordered table-striped table-condensed">
