--- a/Book.Web/Views/Provider/Index.cshtml
+++ b/Book.Web/Views/Provider/Index.cshtml
@@ -24,11 +24,18 @@
                             <label for="exampleInputName2">供应商名</label>
                             <input type="text" class="form-control" id="Name" name="Name" placeholder="" value=@Name>
                         </div>
- 
+                        
 
                         @*<input type="submit" class="btn btn-default" value="查询"></input>*@
                     </form>
                     <h4><i class="fa fa-angle-right"></i>出版社列表 </h4>
+                    <div id="toolbar" class="btn-group pull-left" style="margin-right: 20px;">
+
+
+                        <button id="btn_add" type="button" class="btn btn-default" onclick="location.href='/provider/add'">
+                            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
+                        </button>
+                    </div>
                     <section id="unseen">
                         <table class="table table-bordered table-striped table-condensed">
                             <thead>
