--- a/Book.Web/Views/In/Add.cshtml
+++ b/Book.Web/Views/In/Add.cshtml
@@ -139,7 +139,15 @@
                 title: '折扣',
                 align: 'center',
                 editable: {
-                    type: 'text'
+                    type: 'text',
+                    validate: function (value) {
+                        if ($.trim(value) == "")
+                            return '请输入数值0到1之间';
+                        if (isNaN(value))
+                            return '请输入数值，数值在0到1之间';
+                        if (value < 0 || value > 1)
+                            return '请输入正确的数值在0到1之间';
+                    }
                 }
             },
             {
@@ -272,6 +280,31 @@
     </script>
 
     <script>
+        Date.prototype.format = function (format) {
+            var o = {
+                "M+": this.getMonth() + 1, //month
+                "d+": this.getDate(),    //day
+                "h+": this.getHours(),   //hour
+                "m+": this.getMinutes(), //minute
+                "s+": this.getSeconds(), //second
+                "q+": Math.floor((this.getMonth() + 3) / 3),  //quarter
+                "S": this.getMilliseconds() //millisecond
+            }
+            if (/(y+)/.test(format)) format = format.replace(RegExp.$1,
+            (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+            for (var k in o) if (new RegExp("(" + k + ")").test(format))
+                format = format.replace(RegExp.$1,
+                RegExp.$1.length == 1 ? o[k] :
+                ("00" + o[k]).substr(("" + o[k]).length));
+            return format;
+        }
+        $(document).ready(function () {
+            //alert("hello");
+            var myDate = new Date();
+            //DateFormat bf = new SimpleDateFormat("yyyy-MM-dd");
+            $("#txtCreateTime").attr("value", myDate.format('yyyy-MM-dd'));
+
+        });
     $("#btnSave").click(function () {
         var head = {
             UserName: $("#txtUserName").val(),
